<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_texte"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.MainActivity"
    android:background="@drawable/team_background_phone">


    <TextView
        android:id="@+id/name_txt"
        android:layout_width="211dp"
        android:layout_height="32dp"
        android:text="@string/name_text_description"
        android:textAlignment="viewStart"
        android:textColor="#F8F4F4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/full_name_txt"
        android:layout_width="340dp"
        android:layout_height="54dp"
        android:text="@string/full_name_text_description"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/abbreviation_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abbreviation_text_description"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/city_txt"
        android:layout_width="211dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/city_text_description"
        android:textColor="#F8F4F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_txt" />

    <TextView
        android:id="@+id/conference_txt"
        android:layout_width="213dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/conference_text_description"
        android:textColor="#F8F4F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_txt" />

    <TextView
        android:id="@+id/division_txt"
        android:layout_width="210dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:text="@string/division_text_description"
        android:textColor="#F8F4F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conference_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>